--- a/tareas/205597/teoria_de_decision_204497.ipynb
+++ b/tareas/205597/teoria_de_decision_204497.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.10.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -354,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +682,281 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### **Análisis formal del modelo de decisión en el notebook \"teoria_de_decision_204497.ipynb\"**\n",
+    "\n",
+    "En este modelo, el **decisor** es un estudiante que debe decidir si **hacer trampa o no** en un examen, considerando la incertidumbre sobre el tipo de profesor que le tocará. \n",
+    "\n",
+    "A continuación, detallamos formalmente **cada uno de los elementos del problema de decisión**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **1. Espacio de Estados \\( \\Omega \\)**\n",
+    "El estado \\( \\omega \\) representa el **tipo de profesor** que le toca al estudiante. Hay tres posibles estados:\n",
+    "\n",
+    "\\[\n",
+    "\\Omega = \\{\\text{barco}, \\text{normal}, \\text{estricto} \\}\n",
+    "\\]\n",
+    "\n",
+    "Donde:\n",
+    "- \\( \\omega_1 = \\) \"Barco\" (muy relajado, no castiga la trampa)\n",
+    "- \\( \\omega_2 = \\) \"Normal\" (puede castigar, pero no es extremo)\n",
+    "- \\( \\omega_3 = \\) \"Estricto\" (castiga fuertemente si detecta trampa)\n",
+    "\n",
+    "Cada universidad tiene una distribución **a priori** diferente sobre estos estados.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **2. Espacio de Acciones \\( A \\)**\n",
+    "Las acciones \\( d \\) del estudiante son:\n",
+    "\n",
+    "\\[\n",
+    "A = \\{\\text{No hacer trampa}, \\text{Hacer trampa}\\}\n",
+    "\\]\n",
+    "\n",
+    "Denotamos:\n",
+    "- \\( d_0 = \\) No hacer trampa\n",
+    "- \\( d_1 = \\) Hacer trampa\n",
+    "\n",
+    "El estudiante elige entre estas dos acciones.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **3. Función de Consecuencias \\( c(a, \\omega) \\)**\n",
+    "La función \\( c(a, \\omega) \\) representa el **resultado de la acción \\( a \\) bajo el estado \\( \\omega \\)**. Se define mediante una **matriz de utilidad** \\( U \\), donde cada celda representa la utilidad del estudiante al tomar una acción bajo cierto estado.\n",
+    "\n",
+    "Matriz de utilidades:\n",
+    "\\[\n",
+    "U = \n",
+    "\\begin{bmatrix}\n",
+    "U(\\text{barco}, d_0) & U(\\text{barco}, d_1) \\\\\n",
+    "U(\\text{normal}, d_0) & U(\\text{normal}, d_1) \\\\\n",
+    "U(\\text{estricto}, d_0) & U(\\text{estricto}, d_1) \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\]\n",
+    "\n",
+    "Con valores específicos:\n",
+    "\n",
+    "| Estado (\\( \\omega \\)) | \\( U(d_0) \\) (No trampa) | \\( U(d_1) \\) (Trampa) |\n",
+    "|----------------|-------------|-------------|\n",
+    "| **Barco** (\\( \\omega_1 \\)) | 7 (si estudió) / 3 (si no estudió) | 12 |\n",
+    "| **Normal** (\\( \\omega_2 \\)) | 7 (si estudió) / 3 (si no estudió) | 8 |\n",
+    "| **Estricto** (\\( \\omega_3 \\)) | 7 (si estudió) / 3 (si no estudió) | -20 |\n",
+    "\n",
+    "El resultado depende de **si estudió o no** y del tipo de profesor que le toque.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **4. Proxys \\( Z \\)**\n",
+    "El estudiante no conoce directamente el tipo de profesor \\( \\omega \\), pero sí puede observar señales \\( Z \\) antes del examen, que actúan como **proxys**.\n",
+    "\n",
+    "\\[\n",
+    "Z = \\{\\text{Relajado}, \\text{Amenazante}, \\text{Sin señales claras}\\}\n",
+    "\\]\n",
+    "\n",
+    "Denotamos:\n",
+    "- \\( z_1 = \\) \"Relajado\" → Es más probable que el profesor sea **barco**.\n",
+    "- \\( z_2 = \\) \"Amenazante\" → Es más probable que el profesor sea **estricto**.\n",
+    "- \\( z_0 = \\) \"Sin señales claras\" → No da información precisa.\n",
+    "\n",
+    "Cada estado \\( \\omega \\) tiene una **probabilidad condicional** de emitir una señal \\( Z \\):\n",
+    "\n",
+    "\\[\n",
+    "p(Z \\mid \\omega)\n",
+    "\\]\n",
+    "\n",
+    "Ejemplo:\n",
+    "\\[\n",
+    "p(z_1 \\mid \\omega_1) = 0.8, \\quad p(z_2 \\mid \\omega_1) = 0.1, \\quad p(z_0 \\mid \\omega_1) = 0.1\n",
+    "\\]\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **5. Cómo se actualizan las probabilidades \\( p(\\omega \\mid z) \\)**\n",
+    "Cuando el estudiante observa un **proxy \\( z \\)**, puede actualizar su creencia sobre \\( \\omega \\) usando la **regla de Bayes**:\n",
+    "\n",
+    "\\[\n",
+    "p(\\omega \\mid z) = \\frac{p(z \\mid \\omega) p(\\omega)}{\\sum_{\\omega' \\in \\Omega} p(z \\mid \\omega') p(\\omega')}\n",
+    "\\]\n",
+    "\n",
+    "Ejemplo de actualización para \\( z_1 \\) (\"Profesor relajado\"):\n",
+    "\n",
+    "1. Probabilidades **a priori** según la universidad:\n",
+    "   - ITAM: \\( p(\\omega) = [0.2, 0.4, 0.4] \\)\n",
+    "   - Ibero: \\( p(\\omega) = [0.6, 0.3, 0.1] \\)\n",
+    "\n",
+    "2. Probabilidad condicional de la señal:\n",
+    "   - \\( p(z_1 \\mid \\omega) = [0.8, 0.2, 0.1] \\)\n",
+    "\n",
+    "3. Cálculo de la probabilidad de la señal:\n",
+    "   \\[\n",
+    "   p(z_1) = \\sum_{\\omega' \\in \\Omega} p(z_1 \\mid \\omega') p(\\omega')\n",
+    "   \\]\n",
+    "\n",
+    "4. Aplicamos la regla de Bayes:\n",
+    "   \\[\n",
+    "   p(\\omega_1 \\mid z_1) = \\frac{p(z_1 \\mid \\omega_1) p(\\omega_1)}{p(z_1)}\n",
+    "   \\]\n",
+    "\n",
+    "Esto **ajusta** las creencias del estudiante sobre qué tipo de profesor tiene.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **6. ¿La universidad es un estado o un proxy?**\n",
+    "La universidad determina la **probabilidad a priori** de cada estado \\( \\omega \\), pero no cambia después de que el estudiante recibe información. **No es un proxy porque no se actualiza con nueva evidencia**.\n",
+    "\n",
+    "Formalmente:\n",
+    "- **No es un estado** porque el estudiante no toma decisiones sobre qué universidad elegir.\n",
+    "- **No es un proxy** porque no cambia con la observación de señales \\( Z \\).\n",
+    "- **Es un factor externo que define la distribución a priori** de \\( \\omega \\).\n",
+    "\n",
+    "Se implementa en el modelo como:\n",
+    "```python\n",
+    "def get_prior_probs(universidad):\n",
+    "    if universidad == \"ITAM\":\n",
+    "        return np.array([0.2, 0.4, 0.4])\n",
+    "    elif universidad == \"Ibero\":\n",
+    "        return np.array([0.6, 0.3, 0.1])\n",
+    "    else:\n",
+    "        return np.array([0.33, 0.34, 0.33])\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **7. Cómo se toma la decisión óptima**\n",
+    "Una vez actualizadas las probabilidades \\( p(\\omega \\mid z) \\), el estudiante evalúa el **valor esperado** de cada acción:\n",
+    "\n",
+    "\\[\n",
+    "VE(d) = \\sum_{\\omega \\in \\Omega} p(\\omega \\mid z) U(\\omega, d)\n",
+    "\\]\n",
+    "\n",
+    "Si \\( VE(d_1) > VE(d_0) \\), la decisión óptima es **hacer trampa**.  \n",
+    "Si \\( VE(d_0) > VE(d_1) \\), la decisión óptima es **no hacer trampa**.\n",
+    "\n",
+    "Código que implementa esto:\n",
+    "```python\n",
+    "def valor_esperado(U, dist_estados):\n",
+    "    ve_no_trampa = np.sum(dist_estados * U[:,0])\n",
+    "    ve_trampa = np.sum(dist_estados * U[:,1])\n",
+    "    return (ve_no_trampa, ve_trampa)\n",
+    "```\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## **Conclusión**\n",
+    "- **Estados \\( \\omega \\)**: Tipo de profesor (barco, normal, estricto).\n",
+    "- **Acciones \\( d \\)**: Hacer trampa o no hacer trampa.\n",
+    "- **Consecuencia \\( c(a, \\omega) \\)**: Se define por la matriz de utilidad.\n",
+    "- **Proxys \\( Z \\)**: Señales observadas antes del examen (relajado, amenazante, sin señales claras).\n",
+    "- **Actualización Bayesiana**: Se usa para ajustar la probabilidad de los estados después de observar un proxy.\n",
+    "- **Universidad**: Define las probabilidades **a priori** de \\( \\omega \\), pero no se actualiza y no es un proxy.\n",
+    "\n",
+    "Este modelo usa **teoría de decisión bayesiana** para evaluar estrategias bajo incertidumbre y aprender sobre el entorno a partir de información parcial."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Elige tu universidad:\n",
+      "1. ITAM\n",
+      "2. Ibero\n",
+      "3. Otra\n",
+      "\n",
+      "Observas que el profesor parece: Amenazante\n",
+      "\n",
+      "Valor Esperado de No Hacer Trampa: 3.0\n",
+      "Valor Esperado de Hacer Trampa: -0.6956521739130448\n",
+      "\n",
+      "Decisión Recomendada: No hacer trampa\n",
+      "\n",
+      "Has decidido: No hacer trampa\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "def get_prior_probs(universidad):\n",
+    "    \"\"\" Devuelve la distribución a priori de estados [p(barco), p(normal), p(estricto)] según la universidad.\"\"\"\n",
+    "    if universidad == \"ITAM\":\n",
+    "        return np.array([0.2, 0.4, 0.4])\n",
+    "    elif universidad == \"Ibero\":\n",
+    "        return np.array([0.6, 0.3, 0.1])\n",
+    "    else:\n",
+    "        return np.array([0.33, 0.34, 0.33])\n",
+    "\n",
+    "def get_utility_matrix(estudie):\n",
+    "    \"\"\" Matriz de utilidad que varía según si el estudiante estudió o no.\"\"\"\n",
+    "    if estudie:\n",
+    "        u_no_trampa = 7  # Mayor beneficio si estudió\n",
+    "    else:\n",
+    "        u_no_trampa = 3  # Menor beneficio si no estudió\n",
+    "\n",
+    "    return np.array([\n",
+    "        [u_no_trampa,  12],   # Profesor barco\n",
+    "        [u_no_trampa,  8],    # Profesor normal\n",
+    "        [u_no_trampa, -20]    # Profesor estricto\n",
+    "    ])\n",
+    "\n",
+    "def posterior_probs(prior, z):\n",
+    "    \"\"\" Calcula la distribución posterior p(omega | z) usando Bayes.\"\"\"\n",
+    "    p_z_given_omega = np.array([\n",
+    "        [0.8, 0.2, 0.1],  # p(z1 | omega) - Profesor relajado\n",
+    "        [0.1, 0.3, 0.8],  # p(z2 | omega) - Profesor amenazante\n",
+    "        [0.1, 0.5, 0.1]   # p(z0 | omega) - Sin señales claras\n",
+    "    ])\n",
+    "    \n",
+    "    p_z = np.sum(p_z_given_omega[z] * prior)\n",
+    "    post = (p_z_given_omega[z] * prior) / p_z\n",
+    "    return post\n",
+    "\n",
+    "def valor_esperado(U, dist_estados):\n",
+    "    \"\"\" Calcula la utilidad esperada para cada decisión.\"\"\"\n",
+    "    ve_no_trampa = np.sum(dist_estados * U[:,0])\n",
+    "    ve_trampa = np.sum(dist_estados * U[:,1])\n",
+    "    return (ve_no_trampa, ve_trampa)\n",
+    "\n",
+    "def interactuar_con_usuario():\n",
+    "    \"\"\" Función principal que permite la interacción con el usuario.\"\"\"\n",
+    "    universidades = [\"ITAM\", \"Ibero\", \"Otra\"]\n",
+    "    print(\"\\nElige tu universidad:\")\n",
+    "    for i, uni in enumerate(universidades):\n",
+    "        print(f\"{i + 1}. {uni}\")\n",
+    "    uni_index = int(input(\"Ingresa el número de tu universidad: \")) - 1\n",
+    "    universidad = universidades[uni_index]\n",
+    "    \n",
+    "    estudie = input(\"¿Estudiaste para el examen? (si/no): \").strip().lower() == \"si\"\n",
+    "    \n",
+    "    prior = get_prior_probs(universidad)\n",
+    "    \n",
+    "    señales = [\"Relajado\", \"Amenazante\", \"Sin señales claras\"]\n",
+    "    z = random.choice([0, 1, 2])  # Simula que el estudiante recibe una señal\n",
+    "    \n",
+    "    print(f\"\\nObservas que el profesor parece: {señales[z]}\")\n",
+    "    post = posterior_probs(prior, z)\n",
+    "    \n",
+    "    U = get_utility_matrix(estudie)\n",
+    "    ve_no_trampa, ve_trampa = valor_esperado(U, post)\n",
+    "    \n",
+    "    print(\"\\nValor Esperado de No Hacer Trampa:\", ve_no_trampa)\n",
+    "    print(\"Valor Esperado de Hacer Trampa:\", ve_trampa)\n",
+    "    \n",
+    "    decision_recomendada = \"Hacer trampa\" if ve_trampa > ve_no_trampa else \"No hacer trampa\"\n",
+    "    print(\"\\nDecisión Recomendada:\", decision_recomendada)\n",
+    "    \n",
+    "    respuesta_usuario = input(\"¿Qué decides hacer? (trampa/no trampa): \").strip().lower()\n",
+    "    print(f\"\\nHas decidido: {'Hacer trampa' if respuesta_usuario == 'trampa' else 'No hacer trampa'}\")\n",
+    "    \n",
+    "interactuar_con_usuario()"
+   ]
   }
  ],
  "metadata": {
